force-app/main/default/objects/Engagement__c/fields/Attendance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Rate__c</fullName>
    <formula>IF(Invited__c &gt; 0,Attended__c / Invited__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Rate - All</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>