force-app/main/default/objects/Engagement__c/fields/Attendance_Rate_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Rate_Campaigns__c</fullName>
    <formula>IF((Attended_Campaign__c + Invited_Campaign__c) &gt; 0, Attended_Campaign__c /(Attended_Campaign__c + Invited_Campaign__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Rate - Campaigns</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>