force-app/main/default/objects/Engagement__c/fields/Attendance_Rate_Events__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Rate_Events__c</fullName>
    <formula>IF( (Attended_Event__c +  Invited_Event__c) &gt; 0, Attended_Event__c/(Attended_Event__c +  Invited_Event__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Rate - Events</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>