force-app/main/default/objects/Engagement__c/fields/Attendance_Rate_Mobilize__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Rate_Mobilize__c</fullName>
    <formula>IF((Invited_Mobilize_Campaign__c + Attended_Mobilize_Campaign__c) &gt; 0, Attended_Mobilize_Campaign__c / (Attended_Mobilize_Campaign__c +  Invited_Mobilize_Campaign__c ) , NULL)</formula>
    <label>Attendance Rate - Mobilize</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>