force-app/main/default/objects/Engagement__c/fields/Attendance_Rate_Train_Summit__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Rate_Train_Summit__c</fullName>
    <formula>IF((Invited_Train_Summit_Event__c + Attended_Train_Summit_Event__c) &gt; 0 , Attended_Train_Summit_Event__c /( Attended_Train_Summit_Event__c +  Invited_Train_Summit_Event__c ), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Rate - Train/Summit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>