force-app/main/default/objects/Engagement__c/fields/Attended_Train_Summit_Event__c.field-meta.xml
<CustomField>
    <fullName>Attended_Train_Summit_Event__c</fullName>
    <label>Attended Train/Summit Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>