force-app/main/default/objects/Engagement__c/fields/CASE_SAFE_ID__c.field-meta.xml
<CustomField>
    <fullName>CASE_SAFE_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASE SAFE ID</label>
    <type>Text</type>
</CustomField>