force-app/main/default/objects/Engagement__c/fields/Invited__c.field-meta.xml
<CustomField>
    <fullName>Invited__c</fullName>
    <formula>Invited_Campaign__c + Invited_Event__c + Attended_Event__c + Attended_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>