force-app/main/default/objects/Engagement__c/fields/Invited_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Invited_Campaign__c</fullName>
    <label>Invited Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>