force-app/main/default/objects/Engagement__c/fields/Invited_Event__c.field-meta.xml
<CustomField>
    <fullName>Invited_Event__c</fullName>
    <label>Invited Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>