force-app/main/default/objects/Engagement__c/fields/Post_Invited__c.field-meta.xml
<CustomField>
    <fullName>Post_Invited__c</fullName>
    <label>Post Invited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>