force-app/main/default/objects/Engagement__c/fields/Post_Rate__c.field-meta.xml
<CustomField>
    <fullName>Post_Rate__c</fullName>
    <formula>IF (Post_Invited__c &gt; 0, Posted__c / Post_Invited__c , NULL)</formula>
    <label>Post Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>