force-app/main/default/objects/Engagement__c/fields/Posted__c.field-meta.xml
<CustomField>
    <fullName>Posted__c</fullName>
    <label>Posted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>