force-app/main/default/objects/Engagement__c/fields/Total_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Total_Gifts__c</fullName>
    <formula>Contact__r.npo02__TotalOppAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gifts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>