force-app/main/default/objects/Engagement__c/fields/Touch_Points__c.field-meta.xml
<CustomField>
    <fullName>Touch_Points__c</fullName>
    <label>Touch Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>