force-app/main/default/objects/Engagement__c/fields/Train_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Train_Campaigns__c</fullName>
    <label>Train Campaigns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>